GNOME Bugzilla – Bug 774475
wayland: gtk+ prevents using subsurfaces if the parent is not root
Last modified: 2016-11-29 13:21:35 UTC
Description: Under Wayland, a subsurface would have another surface as parent, but gdk would not allow native windows if the parent is not the root window: https://git.gnome.org/browse/gtk+/tree/gdk/gdkwindow.c#n1218 As a result, the subsurface.c example in gtk+ is not actually using a Wayland sursurface, because the parent is not the root window: https://git.gnome.org/browse/gtk+/tree/tests/subsurface.c?h=gtk-3-22#n49 Note, the test subsurface.c has been removed from master, but that's unrelated, a program should be able to create a subsurface with a parent and not just the root window.
Created attachment 339935 [details] [review] [PATCH] gdkwindow: Allow native subsurface for all parents Patch for master
Created attachment 339936 [details] [review] [PATCH gtk-3-22] gdkwindow: Allow native subsurface for all parents Patch for gtk-3-22 branch
Created attachment 339937 [details] [review] [PATCH master] gdkwindow: Allow native subsurface for all parents Patch for git master
Review of attachment 339937 [details] [review]: ok
Review of attachment 339936 [details] [review]: ok